[tool.poetry]
name = "ftp-cam-store"
version = "0.1.0"
description = "Library for download cameras records with FTP"
authors = ["marakhd <marakin09@mail.ru>"]
license = "MIT"
readme = "README.md"
keywords = ["cam-store", "multi-server", "ftp", "camerarecord", "marakhd"]
repository = "https://github.com/marakhd/ftp-cam-store"
packages = [
    {include = "camstore"}
]

[tool.poetry.dependencies]
python = "^3.12"
aioftp = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
